<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppShare</string>
    <string name="title">分享我的应用</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="myApp">我的应用</string>
	<string name="myFcous">我的关注</string>
	<string name="about">关于</string>
	<string name="exit_msg">再按一次退出程序</string>
	<string name="login_title">登录</string>
	<string name="register_title">注册</string>
	<string name="userid">账号:</string>
	<string name="password">密码:</string>
	<string name="btn_login">登 录</string>
	<string name="btn_register">注 册</string>
    <string name="edt_userid">请输入您的邮箱...</string>
    <string name="edt_nickn">请输入昵称...</string>
    <string name="edt_pass">请输入密码...</string>
    <string name="edt_cfpass">请再次确认密码...</string>
    <string name="save_loginInfo">记住登录信息</string>
    <string name="nameId_error">账号不能为空</string>
    <string name="nick_error">昵称不能为空</string>
    <string name="pass_error">密码不能为空</string>
    <string name="repass_error">两次密码不一样</string>
    <string name="regback_result0">注册出错,请重试</string>
    <string name="regback_result1">注册成功</string>
    <string name="regback_result2">请重新输入</string>
    <string name="regback_result3">账号已被注册</string>
    <string name="logback_result0">账号或密码错误</string>
    <string name="logback_result1">登录成功</string>
    <string name="logback_result2">请重新输入</string>
     <string name="app_appname">程序名：</string>
     <string name="app_versioncode">版本号：</string>
    <string name="app_versionname">版本名：</string>
    <array name="choice">
    	<item name="start">启动程序</item>
    	<item name="detail">详细信息</item>
    	<item name="uninstall">卸载程序</item>
    </array>
    

    
    
</resources>
