<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/register_bg"
    android:orientation="vertical" >
    <!-- android:background="@drawable/login_bg" -->

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/toptitle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/register_title"
            android:textColor="#FFFAF0"
            android:textSize="15sp" >
        </TextView>

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/btn_back" >
        </ImageView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/ed_userId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_userid"
            android:padding="10dp"
            android:background="@drawable/shape"
            android:paddingTop="10dp" >
        </EditText>

        <EditText
            android:id="@+id/ed_nick"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_nickn"
            android:padding="10dp"
            android:background="@drawable/shape" >
        </EditText>

        <EditText
            android:id="@+id/ed_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_pass"
            android:padding="10dp"
            android:background="@drawable/shape"
            android:password="true" >
        </EditText>

        <EditText
            android:id="@+id/ed_cfpass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_cfpass"
            android:padding="10dp"
            android:background="@drawable/shape"
            android:password="true" >
        </EditText>

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_register" />
    </LinearLayout>

</LinearLayout>