<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/toptitle_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/login_title"
            android:textColor="#FFFAF0"
            android:textSize="15sp" >
        </TextView>

       <!--  <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/but_back" >
        </ImageButton> -->
         <ImageView
            android:id="@+id/btn_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:src="@drawable/btn_back" >
        </ImageView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userid"
            android:textColor="#000"
            android:textSize="16sp" >
        </TextView>

        <EditText
            android:id="@+id/user_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@drawable/shape" >
        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/password"
            android:textColor="#000"
            android:textSize="16sp" >
        </TextView>

        <EditText
            android:id="@+id/user_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:password="true"
            android:background="@drawable/shape" >
        </EditText>


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical" >

            <CheckBox
                android:id="@+id/save_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_loginInfo"
                android:layout_alignParentLeft="true"
                android:textSize="10sp" >
            </CheckBox>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="100dp"
                android:text="@string/btn_login" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_toRightOf="@+id/btn_login"
                
                android:text="@string/btn_register" />
        </RelativeLayout> 
        
         <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:gravity="center_vertical" >
            
          <ImageView
              android:id="@+id/iv_sina_login"
              android:paddingLeft="100dp"
              android:layout_gravity="center_vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:src="@drawable/btn_sinalogin"
              ></ImageView>
             
             
        </LinearLayout>
    </LinearLayout>

</LinearLayout>